// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update-nx-next-dependency should not update playwright.config.ts if projects is already defined 1`] = `
"import { defineConfig } from '@playwright/test';
              import { nxE2EPreset } from '@nx/playwright/preset';
  
              import { workspaceRoot } from '@nx/devkit';
  
              const baseURL = process.env['BASE_URL'] || 'http://localhost:4200';
  
              export default defineConfig({
                  ...nxE2EPreset(__filename, { testDir: './src' }),
                  /* Shared settings for all the projects below. See https://playwright.dev/docs/api/class-testoptions. */
                  use: {
                    baseURL,
                    /* Collect trace when retrying the failed test. See https://playwright.dev/docs/trace-viewer */
                    trace: 'on-first-retry',
                  },
                  /* Run your local dev server before starting the tests */
                  webServer: {
                    command: 'npx nx serve acme',
                    url: 'http://localhost:4200',
                    reuseExistingServer: !process.env.CI,
                    cwd: workspaceRoot,
                  },
                  projects: []
                });
                "
`;

exports[`update-nx-next-dependency should update playwright.config.ts 1`] = `
"import { defineConfig, devices } from '@playwright/test';
import { nxE2EPreset } from '@nx/playwright/preset';
import { workspaceRoot } from '@nx/devkit';
const baseURL = process.env['BASE_URL'] || 'http://localhost:4200';
export default defineConfig({ ...nxE2EPreset(__filename, { testDir: './src' }),
    /* Shared settings for all the projects below. See https://playwright.dev/docs/api/class-testoptions. */
    use: {
        baseURL,
        /* Collect trace when retrying the failed test. See https://playwright.dev/docs/trace-viewer */
        trace: 'on-first-retry',
    },
    /* Run your local dev server before starting the tests */
    webServer: {
        command: 'npx nx serve acme',
        url: 'http://localhost:4200',
        reuseExistingServer: !process.env.CI,
        cwd: workspaceRoot,
    }, projects: [
        { name: "chromium", use: { ...devices["Desktop Chrome"] } },
        { name: "firefox", use: { ...devices["Desktop Firefox"] } },
        { name: "webkit", use: { ...devices["Desktop Safari"] } }
    ] });
"
`;
